--- a/arch/arm/boot/dts/qcom/msm8953-gpu.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953-gpu.dtsi
@@ -53,7 +53,8 @@
 			< 5859 >, /* 7. DDR:768.00 MHz BIMC: 384.00 MHz */
 			< 6152 >, /* 8. DDR:806.40 MHz BIMC: 403.20 MHz */
 			< 6445 >, /* 9. DDR:844.80 MHz BIMC: 422.40 MHz */
-			< 7104 >; /*10. DDR:931.20 MHz BIMC: 465.60 MHz */
+			< 7104 >, /*10. DDR:931.20 MHz BIMC: 465.60 MHz */
+			< 8209 >; /*11. DDR:1036.80 MHz BIMC: 518.40 MHz */
 	};
 
 	msm_gpu: qcom,kgsl-3d0@1c00000 {
@@ -67,7 +68,7 @@
 		qcom,id = <0>;
 		qcom,chipid = <0x05000600>;
 
-		qcom,initial-pwrlevel = <6>;
+		qcom,initial-pwrlevel = <7>;
 
 		qcom,idle-timeout = <64>; //msecs
 		qcom,deep-nap-timeout = <100>; //msecs
@@ -93,7 +94,7 @@
 		qcom,bus-control;
 		qcom,bus-width = <16>;
 		qcom,msm-bus,name = "grp3d";
-		qcom,msm-bus,num-cases = <11>;
+		qcom,msm-bus,num-cases = <12>;
 		qcom,msm-bus,num-paths = <1>;
 		qcom,msm-bus,vectors-KBps =
 				<26 512 0 0>,	     /*  off          */
@@ -106,7 +107,8 @@
 				<26 512 0 6144000>, /* 7. 768.00 MHz */
 				<26 512 0 6451200>, /* 8. 806.40 MHz */
 				<26 512 0 6758400>, /* 9. 844.80 MHz */
-				<26 512 0 7449600>; /*10. 931.20 MHz */
+				<26 512 0 7449600>, /*10. 931.20 MHz */
+				<26 512 0 8294400>; /*11. 1036.8 MHz */
 
 		/* GDSC regulator names */
 		regulator-names = "vddcx", "vdd";
@@ -163,18 +165,27 @@
 
 			compatible = "qcom,gpu-pwrlevels";
 
-			/* TURBO */
+			/* TURBO+ */
 			qcom,gpu-pwrlevel@0 {
 				reg = <0>;
+				qcom,gpu-freq = <725000000>;
+				qcom,bus-freq = <11>;
+				qcom,bus-min = <11>;
+				qcom,bus-max = <11>;
+			};
+
+			/* TURBO */
+			qcom,gpu-pwrlevel@1 {
+				reg = <1>;
 				qcom,gpu-freq = <650000000>;
 				qcom,bus-freq = <10>;
 				qcom,bus-min = <10>;
-				qcom,bus-max = <10>;
+				qcom,bus-max = <11>;
 			};
 
 			/* NOM+ */
-			qcom,gpu-pwrlevel@1 {
-				reg = <1>;
+			qcom,gpu-pwrlevel@2 {
+				reg = <2>;
 				qcom,gpu-freq = <560000000>;
 				qcom,bus-freq = <10>;
 				qcom,bus-min = <8>;
@@ -182,8 +193,8 @@
 			};
 
 			/* NOM */
-			qcom,gpu-pwrlevel@2 {
-				reg = <2>;
+			qcom,gpu-pwrlevel@3 {
+				reg = <3>;
 				qcom,gpu-freq = <510000000>;
 				qcom,bus-freq = <9>;
 				qcom,bus-min = <6>;
@@ -191,8 +202,8 @@
 			};
 
 			/* SVS+ */
-			qcom,gpu-pwrlevel@3 {
-				reg = <3>;
+			qcom,gpu-pwrlevel@4 {
+				reg = <4>;
 				qcom,gpu-freq = <400000000>;
 				qcom,bus-freq = <7>;
 				qcom,bus-min = <5>;
@@ -200,8 +211,8 @@
 			};
 
 			/* SVS */
-			qcom,gpu-pwrlevel@4 {
-				reg = <4>;
+			qcom,gpu-pwrlevel@5 {
+				reg = <5>;
 				qcom,gpu-freq = <320000000>;
 				qcom,bus-freq = <4>;
 				qcom,bus-min = <2>;
@@ -209,8 +220,8 @@
 			};
 
 		       /* Low SVS */
-			qcom,gpu-pwrlevel@5 {
-				reg = <5>;
+			qcom,gpu-pwrlevel@6 {
+				reg = <6>;
 				qcom,gpu-freq = <216000000>;
 				qcom,bus-freq = <1>;
 				qcom,bus-min = <1>;
@@ -218,16 +229,16 @@
 			};
 
 		       /* Min SVS */
-			qcom,gpu-pwrlevel@6 {
-				reg = <6>;
+			qcom,gpu-pwrlevel@7 {
+				reg = <7>;
 				qcom,gpu-freq = <133300000>;
 				qcom,bus-freq = <1>;
 				qcom,bus-min = <1>;
 				qcom,bus-max = <4>;
 			};
 			/* XO */
-			qcom,gpu-pwrlevel@7 {
-				reg = <7>;
+			qcom,gpu-pwrlevel@8 {
+				reg = <8>;
 				qcom,gpu-freq = <19200000>;
 				qcom,bus-freq = <0>;
 				qcom,bus-min = <0>;
