--- a/arch/arm/boot/dts/qcom/msm8953.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953.dtsi
@@ -539,7 +539,7 @@
 
 		qcom,vdd-gfx-rstr {
 			qcom,vdd-rstr-reg = "vdd-gfx";
-			qcom,levels = <5 7 7>; /* Nominal, Turbo, Turbo */
+			qcom,levels = <5 7 8>; /* Nominal, Turbo, Turbo+ */
 			qcom,min-level = <1>; /* No Request */
 		};
 
@@ -898,7 +898,8 @@
 			< 400000000   4 >,  /* SVS Plus  */
 			< 510000000   5 >,  /* NOM       */
 			< 560000000   6 >,  /* Nom Plus  */
-			< 650000000   7 >;  /* Turbo     */
+			< 650000000   7 >,  /* Turbo     */
+			< 725000000   8 >;  /* Turbo Plus */
 		#clock-cells = <1>;
 	};
 
